[package]
name = "embedded-iconoir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[test]]
name = "render_test"
required-features = [ "all-resolutions" ]

[[bench]]
name = "bench_icons"
required-features = [ "all-resolutions" ]
harness = false

[features]
12px = []
18px = []
24px = []
32px = []
48px = []
96px = []
144px = []

default = ["24px"]
all-resolutions = ["12px", "18px", "24px", "32px", "48px", "96px", "144px"]

[dependencies]
bit_field = "0.10"
embedded-graphics = "0.7"
embedded-graphics-core = "0.3.3"
paste = "1.0"
static_assertions = "1.1"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.4"

