[package]
name = "embedded-iconoir"
version = "0.2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true


[lib]

[[test]]
name = "render_test"
required-features = [ "all-resolutions" ]

[[bench]]
name = "bench_icons"
required-features = [ "all-resolutions" ]
harness = false

[features]
12px = []
18px = []
24px = []
32px = []
48px = []
96px = []
144px = []

default = ["24px"]
all-resolutions = ["12px", "18px", "24px", "32px", "48px", "96px", "144px"]

[dependencies]
bit_field = "0.10"
embedded-graphics = "^0.8"
paste = "1.0"
static_assertions = "1.1"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.4"

