[package]
name = "embedded-iconoir-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cover_example"


[[bin]]
name = "tester"

[dependencies]
anyhow = "1.0"
colorous = "1.0.10"
embedded-graphics-simulator = "0.5.0"
embedded-graphics = "0.8.0"

embedded-iconoir = { path = "../embedded-iconoir", features = ["all-resolutions"] }
